[tool.poetry]
name = "alar-studios-task"
version = "0.1.0"
description = ""
authors = ["FadingFog <aleksey.guzlov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.4"


[tool.pytest.ini_options]
asyncio_mode = "auto"

addopts = [
    "-v",
    "--color=yes",
    "--log-level=INFO",
]

filterwarnings = [
    "ignore::DeprecationWarning",
]
